// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup - Snapshots > matches snapshot for box variant 1`] = `
<div
  aria-required="false"
  class="grid gap-3"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <label
    class="flex text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer items-start gap-2 font-normal has-[[data-disabled]]:cursor-not-allowed has-[[data-disabled]]:opacity-50 rounded-lg border border-border p-4 transition-colors has-[[data-state=checked]]:border-brand"
    data-slot="label"
    for="radix-normalized"
  >
    <button
      aria-checked="true"
      aria-describedby="radix-normalized-description"
      aria-labelledby="radix-normalized-title"
      class="peer size-4 shrink-0 rounded-full border border-input bg-glass shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
      data-radix-collection-item=""
      data-state="checked"
      id="radix-normalized"
      role="radio"
      tabindex="-1"
      type="button"
      value="starter"
    >
      <span
        class="flex items-center justify-center"
        data-state="checked"
      >
        <span
          class="block size-2 rounded-full bg-background"
        />
      </span>
    </button>
    <div
      class="flex flex-col gap-1.5"
      data-testid="container"
    >
      <span
        class="text-base leading-none font-medium text-foreground"
        data-testid="typography"
        id="radix-normalized-title"
      >
        Starter Plan
      </span>
      <span
        class="font-medium text-sm leading-normal text-muted-foreground"
        data-testid="typography"
        id="radix-normalized-description"
      >
        Perfect for small businesses
      </span>
    </div>
  </label>
  <label
    class="flex text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer items-start gap-2 font-normal has-[[data-disabled]]:cursor-not-allowed has-[[data-disabled]]:opacity-50 rounded-lg border border-border p-4 transition-colors has-[[data-state=checked]]:border-brand"
    data-slot="label"
    for="radix-normalized"
  >
    <button
      aria-checked="false"
      aria-describedby="radix-normalized-description"
      aria-labelledby="radix-normalized-title"
      class="peer size-4 shrink-0 rounded-full border border-input bg-glass shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
      data-radix-collection-item=""
      data-state="unchecked"
      id="radix-normalized"
      role="radio"
      tabindex="-1"
      type="button"
      value="pro"
    />
    <div
      class="flex flex-col gap-1.5"
      data-testid="container"
    >
      <span
        class="text-base leading-none font-medium text-foreground"
        data-testid="typography"
        id="radix-normalized-title"
      >
        Pro Plan
      </span>
      <span
        class="font-medium text-sm leading-normal text-muted-foreground"
        data-testid="typography"
        id="radix-normalized-description"
      >
        Advanced features
      </span>
    </div>
  </label>
</div>
`;

exports[`RadioGroup - Snapshots > matches snapshot for default group with labels 1`] = `
<div
  aria-required="false"
  class="grid gap-3"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <label
    class="flex text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer items-start gap-2 font-normal has-[[data-disabled]]:cursor-not-allowed has-[[data-disabled]]:opacity-50"
    data-slot="label"
    for="radix-normalized"
  >
    <button
      aria-checked="true"
      aria-labelledby="radix-normalized-title"
      class="peer size-4 shrink-0 rounded-full border border-input bg-glass shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
      data-radix-collection-item=""
      data-state="checked"
      id="radix-normalized"
      role="radio"
      tabindex="-1"
      type="button"
      value="one"
    >
      <span
        class="flex items-center justify-center"
        data-state="checked"
      >
        <span
          class="block size-2 rounded-full bg-background"
        />
      </span>
    </button>
    <div
      class="flex flex-col gap-1.5"
      data-testid="container"
    >
      <span
        class="text-base leading-none font-medium text-foreground"
        data-testid="typography"
        id="radix-normalized-title"
      >
        One
      </span>
    </div>
  </label>
  <label
    class="flex text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer items-start gap-2 font-normal has-[[data-disabled]]:cursor-not-allowed has-[[data-disabled]]:opacity-50"
    data-slot="label"
    for="radix-normalized"
  >
    <button
      aria-checked="false"
      aria-labelledby="radix-normalized-title"
      class="peer size-4 shrink-0 rounded-full border border-input bg-glass shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
      data-radix-collection-item=""
      data-state="unchecked"
      id="radix-normalized"
      role="radio"
      tabindex="-1"
      type="button"
      value="two"
    />
    <div
      class="flex flex-col gap-1.5"
      data-testid="container"
    >
      <span
        class="text-base leading-none font-medium text-foreground"
        data-testid="typography"
        id="radix-normalized-title"
      >
        Two
      </span>
    </div>
  </label>
</div>
`;

exports[`RadioGroup - Snapshots > matches snapshot for disabled item 1`] = `
<div
  aria-required="false"
  class="grid gap-3"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="-1"
>
  <label
    class="flex text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer items-start gap-2 font-normal has-[[data-disabled]]:cursor-not-allowed has-[[data-disabled]]:opacity-50"
    data-slot="label"
    for="radix-normalized"
  >
    <button
      aria-checked="false"
      aria-labelledby="radix-normalized-title"
      class="peer size-4 shrink-0 rounded-full border border-input bg-glass shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      id="radix-normalized"
      role="radio"
      tabindex="-1"
      type="button"
      value="one"
    />
    <div
      class="flex flex-col gap-1.5"
      data-testid="container"
    >
      <span
        class="text-base leading-none font-medium text-foreground"
        data-testid="typography"
        id="radix-normalized-title"
      >
        One
      </span>
    </div>
  </label>
</div>
`;

exports[`RadioGroup - Snapshots > matches snapshot for item with label and description 1`] = `
<div
  aria-required="false"
  class="grid gap-3"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <label
    class="flex text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 cursor-pointer items-start gap-2 font-normal has-[[data-disabled]]:cursor-not-allowed has-[[data-disabled]]:opacity-50"
    data-slot="label"
    for="radix-normalized"
  >
    <button
      aria-checked="true"
      aria-describedby="radix-normalized-description"
      aria-labelledby="radix-normalized-title"
      class="peer size-4 shrink-0 rounded-full border border-input bg-glass shadow-sm transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-brand data-[state=checked]:bg-brand"
      data-radix-collection-item=""
      data-state="checked"
      id="radix-normalized"
      role="radio"
      tabindex="-1"
      type="button"
      value="one"
    >
      <span
        class="flex items-center justify-center"
        data-state="checked"
      >
        <span
          class="block size-2 rounded-full bg-background"
        />
      </span>
    </button>
    <div
      class="flex flex-col gap-1.5"
      data-testid="container"
    >
      <span
        class="text-base leading-none font-medium text-foreground"
        data-testid="typography"
        id="radix-normalized-title"
      >
        One
      </span>
      <span
        class="font-medium text-sm leading-normal text-muted-foreground"
        data-testid="typography"
        id="radix-normalized-description"
      >
        The first option
      </span>
    </div>
  </label>
</div>
`;
